PRAISE THE LORD! It'S WORKING!

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
     </head>
     <body>
         <div class="container mt-4 border">
-            <div class="header d-flex justify-content-center align-items-center"">
-                <i><img src="todo.png" alt="todo"></i>
-                <h1 class="display-4 text-primary">The TodoList</h1>
+            <div class="header">
+                <h1 class="display-4 text-primary text-center">The TodoList</h1>
             </div>
             <form id="todo-form">
                 <div class="form-group">
